--- a/index.css
+++ b/index.css
@@ -1,4 +1,68 @@
+:root {
+    --primary-color: white;
+    --soft-primary-color: rgba(255,255,255,0.5);
+  }
+  
+
+body {
+    background: rgb(142,142,142);
+    background: linear-gradient(325deg, rgba(1,0,20,1) 0%, rgba(2,0,30,1) 49%, rgba(1,0,20,1) 100%);
+    font-family: Quicksand, Calibri, Arial, Helvetica, sans-serif;
+}
+
+.profileContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10vh 0 3vh 0;
+}
 #profileimg {
     border-radius: 50%;
-    max-width: 25%;
+    max-width: 50%;
+    min-width: none;
+    max-height: 25vh;
+}
+
+.externalLinks {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 20vw;
+}
+
+.externalLinks a {
+    color: var(--primary-color);
+
+}
+.externalLinks a svg {
+
+    min-width: 8vw;
+    height: 100%;
+    max-height: 2.5rem;
+}
+
+.bioParagraph {
+    background-color: var(--soft-primary-color);
+    padding: 2rem;
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 1rem;
+    margin-top: 1rem;
+}
+
+.contentlinks div {
+    transition: all 2s;
+}
+
+.hidden {
+    height: 0;
+}
+
+@media (orientation: portrait) {
+    .externalLinks {
+        padding: 0;
+    }
+    .bioParagraph {
+        padding: 0.5rem 1rem;;
+    }
 }
