--- a/CV.css
+++ b/CV.css
@@ -25,6 +25,13 @@ body > div {
     padding-right: 10vw;
 }
 
+@media screen and (max-width: 768px) {
+    body > div {
+        padding-left: 1vw;
+        padding-right: 1vw;
+    }
+}
+
 /* Header */
 #header {
     text-align: center;
@@ -84,7 +91,7 @@ svg {
     grid-column: 1/2;
     font-family:"Adobe Garamond Pro",serif;
     color:var(--highlight-color);
-    font-weight: 500;
+    font-weight: 600;
     text-align: right;
     font-size: 1.3rem;
 }
@@ -92,8 +99,18 @@ svg {
     padding: 1.2rem;
     grid-column: 2/3;
     font-size: 1rem;
-    color: var(--secondary-color)
+    color: var(--secondary-color);
+    min-width: 30%;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+  }
+  .sticky + .content {
+    padding-top: 102px;
+  }
+
 .rightCol p {
     margin: 0 auto;
 }
@@ -105,4 +122,30 @@ svg {
 
 .altmetric {
     vertical-align: middle;
+}
+.inlineicon {
+    vertical-align: middle;
+    width: 1rem;
+}
+#content table {
+    margin: 0.3rem 0;
+}
+#posters img {
+    width: 8vw;
+}
+#researchImpact * img {
+    height: 2.3rem;
+    margin: 0.6rem 0;
+    vertical-align: middle;
+}
+    #posters * a:hover {
+        opacity: 80%;
+        filter: brightness(100%);
+    }
+#researchImpact td {
+    vertical-align: middle;
+}
+
+#teaching p {
+    margin: 0 auto 1rem auto;
 }
