--- a/index.css
+++ b/index.css
@@ -137,34 +137,44 @@ a {
 }
 
 /* CONTENT LINKS */
+.contentlinks {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
 .contentlinks > div a {/* card */
     transition: all 0.2s;
     color: var(--primary-color);
     border-radius: 0.5rem;
     margin: 0.5rem 0;
     background-color: var(--soft-primary-color);
-    display: flex;
+    display: grid;
     flex-direction: row;
-    vertical-align: middle;
-    overflow: hidden;
+    align-items: center;
 }
 
 .contentlinks div a div {
     padding: 0 1rem;
     height: 6rem;
-    font-weight: 600;
-    font-size: 1.2rem;
-    display: flex;
+    display: grid;
     align-items: center;
 }
 
 .cardColumnLeft {
     display: block;
     position: relative;
+    grid-column: 1/2;
+    width: min-content;
+    font-weight: bold;
 }
 
 .cardColumnRight {
     justify-content:flex-end;
+    grid-column: 2/3;
+}
+
+.contentlinks p {
+    padding: 0 1rem;
 }
 
 .hidden {
