--- a/index.css
+++ b/index.css
@@ -154,19 +154,25 @@ a {
     background-color: var(--primary-color);
     padding: 0.5rem 1rem 1rem 1rem;
 }
-
-.contentlinks > div a {/* card */
+.contentlinks > div {/* card */
     transition: all 0.2s;
     color: var(--primary-color);
     border-radius: 0.5rem;
     margin: 0.5rem 0;
-    background-color: var(--soft-primary-color);
-    display: grid;
-    flex-direction: row;
-    align-items: center;
+    background-color: white;
     overflow: hidden;
 }
-.contentlinks a:hover {
+
+.contentlinks > div a {
+    /* transition: all 0.2s;
+    color: var(--primary-color);
+    border-radius: 0.5rem;
+    margin: 0.5rem 0;
+    background-color: var(--soft-primary-color);
+    overflow: hidden; */
+    color: var(--primary-color);
+}
+.contentlinks > div:hover {
     transition: all 0.2s ease;
     transform: scale(1.01);
     box-shadow: 0 3.5vh 40px 0 rgba(0, 0, 0, 0.09);
@@ -176,10 +182,23 @@ a {
 }
 
 .contentlinks div a div {
-    padding: 0 1rem;
-    height: 6rem;
     display: grid;
     align-items: center;
+}
+
+.cardUpper {
+    height: 5rem;
+    overflow: hidden;
+    justify-items: center;
+}
+
+.cardLower {
+    background: var(--secondary-color);
+    padding: 1rem;
+}
+.cardLower span {
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .cardColumnLeft {
