--- a/index.css
+++ b/index.css
@@ -37,15 +37,17 @@ a {
 
 /* EXTERNAL LINKS */
 .externalLinks {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
     align-items: baseline;
-    justify-content: space-around;
-    padding: 0 20vw;
+    justify-items: center;
+    /* padding: 0 20vw; */
 }
 
 .externalLinks a {
     color: var(--primary-color);
     transition: all 0.2s ease;
+    text-align: center;
 }
 .externalLinks a svg {
 
@@ -72,6 +74,7 @@ a {
     text-align: center;
     visibility: hidden;
     transition: in 0.2s ease;
+    max-width: 100%;
 }
 
 #twitter:hover {
@@ -83,12 +86,16 @@ a {
 #aphasiatherapyonline:hover {
     color: rgb(71, 117, 62);
 }
-#emaila:hover {
-    color:#ff8300;
-}
 #latrobe:hover {
     color: #e22333;
 }
+#cv:hover {
+    color:#9022ea;
+}
+#emaila:hover {
+    color:#ff8300;
+}
+
 
 
 /* BIO PARAGRAPH */
@@ -153,12 +160,14 @@ a {
     font-size: 1.2rem;
     background-color: var(--primary-color);
     padding: 0.5rem 1rem 1rem 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
 }
 .contentlinks > div {/* card */
     transition: all 0.2s;
     color: var(--primary-color);
     border-radius: 0.5rem;
-    margin: 0.5rem 0;
     background-color: white;
     overflow: hidden;
 }
@@ -233,11 +242,31 @@ a {
     -webkit-transform: rotate(-45deg);
   }
 
-@media (orientation: portrait) {
+  @media (max-width: 1100px) {
     body {
-        max-width: 90vw;
-    }
+            max-width: 90vw;
+        }
+  }
+
+@media (max-aspect-ratio: 975/762) {
+    
     .externalLinks {
         padding: 0;
+    }
+    .contentlinks {
+        grid-template-columns: 1fr; 
+    }
+}
+
+@media (hover: none) {
+    .externalLinks a:hover {
+        transition: none;
+        transform: none;
+        /* filter: drop-shadow(0 0.1rem 0.1rem rgba(0, 0, 0,0.45)); */
+        /* box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0,0.45);
+        background: rgb(54, 54, 54); */
+    }
+    .externalLinkLabel {
+        visibility:visible;
     }
 }
