--- a/CV.css
+++ b/CV.css
@@ -95,6 +95,10 @@ svg {
     text-align: right;
     font-size: 1.3rem;
 }
+    .leftCol div {
+        position: sticky;
+        top: 0;}
+
 .rightCol {
     padding: 1.2rem;
     grid-column: 2/3;
