--- a/CV.css
+++ b/CV.css
@@ -97,7 +97,9 @@ svg {
 }
     .leftCol div {
         position: sticky;
-        top: 0;}
+        top: 0;
+        cursor: pointer;
+    }
 
 .rightCol {
     padding: 1.2rem;
@@ -105,6 +107,9 @@ svg {
     font-size: 1rem;
     color: var(--secondary-color);
     min-width: 30%;
+    max-height: 500rem;
+    transition: max-height 0.3s ;
+    overflow: hidden;
 }
     .rightCol table {
         width: 100%;
@@ -115,6 +120,17 @@ svg {
     .rightCol > img {
         width: 100%;
     }
+.rightColHidden {
+    max-height: 1.1rem;
+}
+.rightColMask {
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.3) 100%);
+    position: absolute; 
+    width: 100%;
+    height: 2.5rem;
+    opacity: 0;
+    transition: opacity 0.6s;
+}
 
 .sticky {
     position: fixed;
