--- a/CV.css
+++ b/CV.css
@@ -72,6 +72,9 @@ svg {
 #details {
     text-align: center;
 }
+#details p {
+    margin: 0.7rem auto 0.7rem auto;
+}
 #details p span {
     font-size: 1.1rem;
     white-space: nowrap;
