--- a/publication.css
+++ b/publication.css
@@ -92,6 +92,12 @@ transition: 0.1s all;
     margin-inline-end: 0.5rem;
 }
 
+.abstract {
+    text-align: justify;
+  margin-bottom: 3rem;
+  font-size: 1.4rem;
+}
+
 p {
     font-size: 1.2rem;
     text-align: justify;
