--- a/CV.css
+++ b/CV.css
@@ -238,3 +238,66 @@ svg {
         padding-left: 0.4rem;
     }
 }
+
+@media screen and (max-width: 500px) {
+    #content {
+        /* display: block; */
+        grid-template-columns: min-content 1fr;
+    }
+    .rightCol {
+        margin-top: 2rem;
+    }
+    #Collaboration {
+        margin-top: 4rem;
+    }
+    .leftCol {
+        padding-left: 0.4rem;
+        padding-bottom: 0.2rem;
+        text-align: left;
+        font-size: 1.6rem;
+        width: 1vw;
+    }
+    .leftCol div {
+        width: 100vw;
+        text-align: center;
+        background-color: white;
+        margin-left: -0.6rem;
+        padding: 1px 1.6rem;
+        box-sizing: border-box;
+    }
+    #homeArrow {
+        display: none;
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    #header a {
+        font-size: 1rem;
+        grid-column: 2/3;
+    }
+    #header a:not(:last-child)::after {
+        content: none;
+    }
+    #header p {
+        text-align: left;
+        display: block;
+        display: grid;
+        grid-template-columns: 1fr min-content 1fr;
+        grid-gap: 0.2rem;
+    }
+    #details p > span:not(:last-child)::after {
+        content: "|";
+        margin: 0 0.3rem;
+    }
+    #details p span {
+        font-size: 0.9rem;
+        white-space: normal;
+    }
+    #topArrow {
+        z-index: 1;
+    }
+    #topArrow svg {
+        background: white;
+        width: 1.6rem;
+    }
+}
