--- a/index.css
+++ b/index.css
@@ -315,4 +315,8 @@ a {
     .externalLinkLabel {
         visibility:visible;
     }
+    .profileContainer {
+        padding: 4vh 0 3vh 0;
+    }
 }
+
