--- a/CV.css
+++ b/CV.css
@@ -177,8 +177,8 @@ svg {
 #JournalArticles * td {
     padding-right: 3rem;
 }
-#JournalArticles p, #researchImpact p {
-    margin-bottom: auto;
+#JournalArticles p {
+    margin-bottom: 1rem;
 }
 
 #content a {
@@ -203,6 +203,9 @@ svg {
     height: 2.3rem;
     margin: 0.6rem 0;
     vertical-align: middle;
+}
+#researchImpact p {
+    margin-bottom: auto;
 }
     #posters * a:hover {
         opacity: 80%;
