--- a/CV.css
+++ b/CV.css
@@ -177,8 +177,9 @@ svg {
 #JournalArticles * td {
     padding-right: 3rem;
 }
-#JournalArticles p {
-    margin-bottom: 1rem;
+#JournalArticles p:not(:nth-of-type(1)) {
+    margin-bottom: 0;
+    margin-top: 1rem;
 }
 
 #content a {
