--- a/publication.css
+++ b/publication.css
@@ -106,6 +106,11 @@ ul,ol {
     font-size: 1.2rem;
 }
 
+ol li {
+    margin-bottom: 1rem;
+    margin-left: 3rem;
+}
+
 .mid {
     background-color: var(--mid-color);
     color: var(--light-color);
