--- a/index.css
+++ b/index.css
@@ -136,7 +136,7 @@ a {
 
 /* BIO PARAGRAPH */
 .bioParagraph {
-    margin: 1rem auto 2rem auto;
+    margin: 1rem auto 4rem auto;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -171,20 +171,38 @@ a {
     border-radius: 0.7rem;
 }
 .focus {
-    color: var(--focus-color)!important;
+    color: var(--secondary-color)!important;
+    background-color: var(--primary-color)!important;
+}
+.focus::before {
+    content: "✓ ";
 }
 
 /* WORDCLOUD */
 .wordcloud {
     overflow-wrap: break-word;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     padding: 0.5rem 1rem 1rem 1rem;
     border-radius: 0.5rem 0.5rem 0 0 ;
-    color: var(--secondary-color);
+    color: var(--primary-color);
+    line-height: 1.6;
 }
 .wordcloud span {
-    margin: auto 0.3rem;
+    margin: 0.2rem 0.4rem;
+    transition: all 0.2s ease;
+    background: var(--soft-primary-color);
+    color: var(--primary-secondary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 1rem;
+    padding: 0rem 0.7rem;
+    display: inline-block;
 }
+    .wordcloud span:hover {
+        transition: all 0.2s ease;
+        background: color-mix(in srgb, var(--soft-primary-color) 90%, black);
+        cursor: pointer;
+        transform: scale(1.02);
+    }
 #learnAbout {
     font-size: 1.8rem;
     color: var(--primary-color);
@@ -200,16 +218,18 @@ a {
     columns: 2;
     column-gap: 1rem;
     border-radius: 1rem;
+    margin-bottom: 3rem;
 }
 .contentlinks > div {/* card */
-    transition: all 0.2s;
+    transition: all 0.3s ease;
     color: var(--primary-color);
     border-radius: 0.5rem;
     background-color: var(--secondary-color);
     overflow: hidden;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
+    max-height: 1000px;
 }
-    .contentlinks > div:first-child {
+    .contentlinks > div:last-child {
         margin-top: 0;
     }
 
@@ -280,9 +300,10 @@ a {
     padding: 0 1rem;
 }
 
-.hidden {
-    height: 0;
-    display: none;
+.contentlinks > div.hidden {
+    max-height: 0;
+    opacity: 0;
+    margin-bottom: 0;
 }
 
 .arrow {
