--- a/publication.css
+++ b/publication.css
@@ -129,6 +129,19 @@ ol li {
     padding: 0;
 }
 
+.imgPanel {
+    width:100vw;
+    padding: 0;
+    margin-bottom: -5px;
+    max-height: 40vh;
+    overflow: hidden;
+    text-align: center;
+    background-color: black;
+}
+.imgPanel img {
+    width: 100vw;max-width: 100vw;justify-self: center;
+}
+
 @media screen and (max-width: 500px) {
     body > * {
         padding-left: 4vw;
